# exec-from-memory

./: .gitignore  Makefile  README.md  config.h.in  exec_jmp.s  execve.c  execve.h  execve_internal.h  execve_test.c  main.c  meson.build  meson_options.txt  pack.py  test.c
subprojects/: cvector.wrap  tinyaes.wrap
tests/: execve_test.c  test_utils.c  test_utils.h
tests/files/: README
