option(
    'debugg',
    type: 'boolean',
    value: false,
    description: 'Enable/disable various debugging facilities',
)
option(
    'payload',
    type: 'string',
    value: '',
    description: 'Path to the payload to embed',
)
option(
    'aes_key',
    type: 'string',
    value: '11223344556677889900aabbccddeeff',
    description: 'AES key to use for payload encryption/decryption',
)
option(
    'interp',
    type: 'string',
    value: '',
    description: 'Override the interpreter',
)
