option(
    'payload',
    type: 'string',
    value: '',
    description: 'Path to the payload to embed',
)
option(
    'aes_key',
    type: 'string',
    value: '11223344556677889900aabbccddeeff',
    description: 'AES key to use for payload encryption/decryption',
)
option(
    'stack_size',
    type: 'integer',
    value: -1,
    description: 'The stack size of the exec\'d process. RLIMIT_STACK if unspecified',
)
option(
    'interp',
    type: 'string',
    description: 'Override the interpreter',
)
option(
    'python',
    type: 'string',
    description: 'Path to Python executable to use during building',
)
